--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.4",
     "@reach/visually-hidden": "^0.18.0",
+    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lenis": "^1.3.7",
     "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
