Refactor code structure for improved readability and maintainability

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,7 @@
         }
     ],
     "orientation": "any",
-    "display": "fullscreen",
+    "display": "standalone",
     "dir": "auto",
     "lang": "en-US",
     "name": "Anas",
