--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
-    "next": "15.1.4",
+    "next": "^15.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
