--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lenis": "^1.3.7",
     "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
@@ -32,6 +33,7 @@
     "react-icons": "^5.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
